# SFML_test

./: CMakeLists.txt
include/: DashboardWindow.hpp  PlotFrame.hpp  RectangularDrawable.hpp  StatefulDrawable.hpp
src/: test_main.cpp
